--- a/style.css
+++ b/style.css
@@ -5,3 +5,9 @@ html, body {
 canvas {
   display: block;
 }
+.lock-screen {
+    height: 100%;
+    overflow: hidden;
+    width: 100%;
+    position: fixed;
+}
