--- a/style.css
+++ b/style.css
@@ -27,3 +27,28 @@ text-decoration: none;
     position: fixed;
 }
  */
+/* collapsible text */
+.collapsible {
+  background-color: #ffffff;
+  color: pink;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: center;
+  outline: none;
+  font-size: 40px;
+}
+
+/* hover over colour */
+.active, .collapsible:hover {
+  background-color: #daf3ff;
+}
+
+
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #daf3ff;
+}
